// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calls loadIndicators prop if indicators are not set 1`] = `
<div
  className="country"
>
  <div
    className="country"
  >
    <h1>
      Country name
    </h1>
    <p>
      Region: 
      Region name
    </p>
    <p>
      Income level: 
      Income level
    </p>
    <p>
      Capital city: 
      City name
    </p>
    <h1>
      Indicators
    </h1>
    <nav
      className="indicators__list"
    />
  </div>
</div>
`;

exports[`Renders country and indicators list 1`] = `
<div
  className="country"
>
  <div
    className="country"
  >
    <h1>
      Country name
    </h1>
    <p>
      Region: 
      Region name
    </p>
    <p>
      Income level: 
      Income level
    </p>
    <p>
      Capital city: 
      City name
    </p>
    <h1>
      Indicators
    </h1>
    <nav
      className="indicators__list"
    >
      <a
        className="indicators__list__item"
        href="/countries/AA/indicator/1"
        onClick={[Function]}
      >
        First indicator
      </a>
      <a
        className="indicators__list__item"
        href="/countries/AA/indicator/2"
        onClick={[Function]}
      >
        Second indicator
      </a>
    </nav>
  </div>
</div>
`;
